<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.ux7.fullhyve.ui.activities.EditProfileView">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:padding="20dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/edit_profile_first_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="First Name"
                    android:inputType="textPersonName" />

                <EditText
                    android:id="@+id/edit_profile_last_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="Last Name"
                    android:inputType="textPersonName" />
            </LinearLayout>

            <EditText
                android:id="@+id/edit_profile_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="Title"
                android:inputType="textPersonName" />

            <MultiAutoCompleteTextView
                android:id="@+id/edit_profile_skills"
                android:layout_width="match_parent"
                android:hint="Skills"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/edit_profile_bio"
                android:layout_width="match_parent"
                android:layout_height="160dp"
                android:ems="10"
                android:gravity="top"
                android:hint="Bio"
                android:inputType="textMultiLine" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/edit_profile_upload_image"
                    android:layout_width="97dp"
                    android:layout_height="97dp"
                    android:layout_gravity="center"
                    android:layout_margin="40dp"
                    android:layout_weight="0"
                    android:background="@mipmap/pp1_round" />

                <Button
                    android:id="@+id/edit_profile_ipload_image_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="10dp"
                    android:onClick="getImage"
                    android:layout_weight="1"
                    android:background="@drawable/ripple_effect_accent"
                    android:text="Upload"
                    android:textColor="@color/textdark" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:orientation="horizontal">


            <Button
                android:id="@+id/edit_profile_update_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:onClick="updateProfile"
                android:background="@drawable/ripple_effect_accent"
                android:text="Update"
                android:textColor="@color/textdark" />
        </LinearLayout>

    </LinearLayout>
</android.support.constraint.ConstraintLayout>
