<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_notifications"
            android:icon="@drawable/ic_notification_bell_icon"
            android:title="Notifications" />
        <item
            android:id="@+id/nav_chat"
            android:icon="@drawable/ic_chat_icon"
            android:title="Chat" />
        <item
            android:id="@+id/nav_teams"
            android:icon="@drawable/ic_teams_icon"
            android:title="Teams" />
        <item
            android:id="@+id/nav_projects"
            android:icon="@drawable/ic_menu_manage"
            android:title="Projects" />
    </group>

    <item android:title="Options">
        <menu>
            <item
                android:id="@+id/nav_edit_profile"
                android:icon="@drawable/ic_profile_icon"
                android:title="Profile" />
            <item
                android:id="@+id/nav_log_out"
                android:icon="@drawable/ic_menu_send"
                android:title="Log Out" />
        </menu>
    </item>

</menu>
