<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.ux7.fullhyve.ui.activities.LoginView">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/ic_logo_bg_2"
        android:orientation="vertical"
        android:id="@+id/login_view">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/fadeBackground"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/login_logo"
                android:layout_width="match_parent"
                android:layout_height="278dp"
                android:padding="20dp"
                app:srcCompat="@drawable/ic_logo2_p" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="Username"
                    android:inputType="textPersonName"
                    android:text="samwolde" />

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="Password"
                    android:inputType="textPassword"
                    android:text="1234" />
            </LinearLayout>

            <Button
                android:id="@+id/login_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/ripple_effect_accent"
                android:text="Sign In"
                android:onClick="login"
                android:textColor="@color/textdark" />

            <TextView
                android:id="@+id/login_sign_up"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Sign Up"
                android:textAlignment="center"
                android:textColor="@color/colorAccent" />
        </LinearLayout>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>
